# boilerplate

./: .env.example  .gitignore  .workmux.yaml  AGENTS.md  README.md  dev.sh  docker-compose.yml  scratch.md
.claude/commands/: setup.md
api/: .dockerignore  Dockerfile  Program.cs  api.csproj
api/Repositories/: TimescaleRepository.cs
backend/: .env.example  .envrc  .gitignore  Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/agent/: graph.py  nodes.py  prompts.py
backend/src/api/: router.py
backend/tests/test_agent/: test_graph.py
docs/: index.md
docs/api/: copilotkit.md  database.md  index.md  rest.md
docs/architecture/: agent.md  components.md  data-flow.md  index.md  overview.md
docs/components/: auth-demo.html  auth.md  chat-demo.html  copilot-chat.md  copilot-provider.md  index.md
docs/guides/: api-routes.md  custom-agent.md  development.md  environment.md  index.md  migrations.md  setup.md
frontend/: .env.example  Dockerfile  drizzle.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/__tests__/components/auth/: sign-in-form.test.tsx
frontend/__tests__/lib/: utils.test.ts
frontend/mockups/: aurelius-mind-landing-page.tsx  project-aurelius-landing-page.tsx
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: auth.ts  db.ts
planning-docs/: Aurelius_Ledger_Requirements.md
scripts/: start-api  worktree-env  worktree-setup
third-party-docs/: workmux.md
(+9 files in other folders)
